force-app/main/default/objects/Account/fields/Dealer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Tier__c</fullName>
    <label>Dealer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
                <default>true</default>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>