force-app/main/default/objects/Account/fields/DealerTrustScore__c.field-meta.xml
<CustomField>
    <fullName>DealerTrustScore__c</fullName>
    <label>Dealer Trust Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>