force-app/main/default/objects/Account/fields/Preferred_Approver__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default OEM approver assigned to this dealer for claim routing.</description>
    <label>Preferred OEM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Dealer Accounts</relationshipLabel>
    <relationshipName>Preferred_Approver_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>