force-app/main/default/objects/Account/fields/WhatsApp_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Business_Number__c</fullName>
    <label>WhatsApp Business Number</label>
    <type>Phone</type>
</CustomField>